<?xml version="1.0" encoding="utf-8"?>
<!--Bichoy Sedrak - CSIT551 Mobile Computing Summer 2022-->

<!-- Course Registration app -->

<!-- the fragment for entering the student information-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="@color/smallback">

<!-- Spinner to select which year/course -->
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="@+id/studentID"
        app:layout_constraintStart_toStartOf="@+id/studentID"
        app:layout_constraintTop_toBottomOf="@+id/studentID"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Text input to read the student Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/amita_bold"
            android:hint="@string/enter_name_of_student"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Text input to read the student ID -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:fontFamily="@font/amita_bold"
            android:hint="@string/enter_student_id"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- The Submit Button-->
    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/year"
        app:layout_constraintTop_toBottomOf="@+id/year" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--End Bichoy Sedrak -->
